[package]
name = "retort-js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.91"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "=1.0.1"
web-sys = { version = "0.3.68", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console"] }
scraper = "0.19.0"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
