[package]
name = "retort-js"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = {version = "0.2.91"}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "=1.0.1"
web-sys = { version = "0.3.68", features = ["Document", "Element", "HtmlElement", "Node", "Window", "console", "Text"] }
wasm-bindgen-futures = "0.4.42"
regex = "1.10.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
